# ai_player

./: CMakeLists.txt  setup_project.bat  setup_project.sh
ai_player/: CMakeLists.txt  ai_player.cpp  ai_player.h
ai_player/docs/: REQUIREMENTS.md
docs/: DEVELOPMENT_PLAN.md
